Fix footer and Twitter spacing

--- a/foodtruck/static/css/theme.css
+++ b/foodtruck/static/css/theme.css
@@ -50,6 +50,14 @@ body {
   margin-bottom: 20px;
 }
 
+.theme-showcase > p > .btn {
+  margin: 5px 0;
+}
+
+.theme-showcase .navbar .container {
+  width: auto;
+}
+
 footer {
   position: center ;
   bottom:0;
